src/test/ui/codemap_tests/overlapping_spans.stderr
error[E0509]: cannot move out of type `S`, which implements the `Drop` trait
  --> $DIR/overlapping_spans.rs:21:9
   |
21 |         S {f:_s} => {}
   |         ^^^^^--^
   |         |    |
   |         |    hint: to prevent move, use `ref _s` or `ref mut _s`
   |         cannot move out of here

error: aborting due to previous error

